feat(client-address): create entity
